@@ -3,6 +3,7 @@ Build 25 (10.12.2012)
 - Added "Freighter" unit (it still can't harvest)
 - Power generator & Water launch pad now constructed with one Freighter unit
 - Added "Headquarter 3" building
+- Added harvesting cursor
 
 Build 24 (03.12.2012)
 - Changed interface cursor
